--- a/style.css
+++ b/style.css
@@ -117,6 +117,12 @@ section h2{
     font-size: 25px;
 }
 
+#home > .text > #greet{
+    font-size: 20px;
+    margin-bottom: 25px;
+    opacity: 75%;
+}
+
 .passport2{
     width: fit-content;
     height: 300px;
@@ -269,6 +275,7 @@ main .btn > button{
 /* Education */
 .edu-container{
     display: flex;
+    height: 100%;
 }
 
 .row1, .row2{
